k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-bank-api-svc
spec:
  selector:
    app: simple-bank-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
