k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: simplebankapi.rmdev.space
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: simple-bank-api-svc
                port:
                  number: 80
  tls:
    - hosts:
      - simplebankapi.rmdev.space
      secretName: simple-bank-api-cert
